# bigtorig-mcp-hub

./: .gitignore  AFFIRMATION_APP_DATABASE.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  KUBERNETES-BENEFITS.md  NETWORK.md  NEXT-STEPS.md  PART-II-SUMMARY.md  PHASE-2-COMPLETE.md  README.md  SETUP.md  TROUBLESHOOTING.md  pyproject.toml  test_create_db.py
k8s/: deployment.yaml  secrets-example.yaml  service.yaml  service.yaml 
src/: server.py
